Revision history for {{$dist->name}}

{{$NEXT}}

0.06      2014-11-21 22:24:46 CET

    - Fix compressed report generation for #line-mapped files

0.05      2014-11-20 23:08:26 CET

    - Fix race condition when loading merged report

0.04      2014-11-19 23:47:19 CET

    - Test fixes for Perl 5.14
    - Optionally Gzip-compress generated HTML/SVG files

0.03      2014-11-18 12:36:18 CET

    - Do not report eval BLOCK stack frames
    - Allow running aggregation on multiple hosts
    - Minor tweaks to aggregation code

0.02      2014-10-07 08:46:13 CEST

    - Uniquely identify BEGIN blocks and anonymous subs
    - Made the report more complete, more usable, less hideous
    - Windows/Mac OS X portability
    - Switch to Text::MicroTemplate

0.01      2014-09-01 20:49:35 CEST

    - First public release